# bettercv

./: README.md  requirements.txt
src/: pyproject.toml
src/bettercv/: image.py
